agregue el html y faltaria dar esetilo con css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Nexo - Juego online de laberinto</title>
 </head>
 <body>
-    
+    <div class="game-container">
+        <canvas id="game"></canvas>
+
+        <div class="buttons">
+            <button id="up">🡡</button>
+            <button id="left">🡠</button>
+            <button id="right">🡢</button>
+            <button id="down">🡣</button>
+        </div>
+
+        <div class="messages">
+            <p>Parrafo</p>
+        </div>
+    </div>
+
+    <script src="./maps.js"></script>
+    <script src="./game.js"></script>
 </body>
 </html>
