--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="down">🡣</button>
         </div>
 
-        <div class="messages">
+        <div class="infoGame" id="infoGame">
             <p>Parrafo</p>
         </div>
     </div>
