estilice la pagina del juego

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
         <div class="buttons">
             <button id="up">🡡</button>
-            <button id="left">🡠</button>
-            <button id="right">🡢</button>
+            <div class="horiz">
+                <button id="left">🡠</button>
+                <button id="right">🡢</button>
+            </div>
             <button id="down">🡣</button>
         </div>
 
