agregamos los corazones interactivos en el html para que el jugador los pueda ver

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="infoGame" id="infoGame">
-            <p>Parrafo</p>
+            <p>Vidas: <span id="lives"></span></p>
         </div>
     </div>
 
