agregue dos parrafos nuevos para mostrar el record de los jugadores y el record anterior de los jugadores, ademas agregue una funcion que guarda el record de los jugadores y lo compara con valores anteriores

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class="infoGame" id="infoGame">
             <p>Vidas: <span id="lives"></span></p>
             <p>Tiempo: <span id="time"></span></p>
+            <p>Redord: <span id="record"></span></p>
+            <p id="mensaje"></p>
         </div>
     </div>
 
