cambie las flechas del juego porque no aparecian de forma correcta

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <canvas id="game"></canvas>
 
         <div class="buttons">
-            <button id="up">🡡</button>
+            <button id="up">🔼</button>
             <div class="horiz">
-                <button id="left">🡠</button>
-                <button id="right">🡢</button>
+                <button id="left">◀️</button>
+                <button id="right">▶️</button>
             </div>
-            <button id="down">🡣</button>
+            <button id="down">🔽</button>
         </div>
 
         <div class="infoGame" id="infoGame">
